# attention.rs

./: AGENTS.md  Cargo.toml  ReadMe.md
docs/: fp8_ops.md  fused_rope.md  mamba_gdn.md  moe.md  paged_attention.md  sampling.md
src/: flashinfer.rs  fp8_linear.rs  fused_rope.rs  gdn.rs  lib.rs  mamba_cache.rs  moe.rs  paged_attention.rs  topk.rs
src/kernels/: Cargo.toml  build.rs
src/kernels/src/: ffi.rs  flashinfer_adapter.cu  flashinfer_bmm_fp8.cu  flashinfer_moe_adapter.cu  fp8_gemm_cutlass.cu  fp8_moe_cutlass.cu  fused_rope.cu  gdn.cu  mamba_scatter_kernel.cu  moe_gemm_wmma.cu  paged_attention_v1.cu  paged_attention_v2.cu  prefill_paged_attn.cu  prefill_paged_attn_opt.cu  reshape_and_cache_kernel.cu
src/kernels/src/trtllm/: trtllm_batched_gemm_runner.cu  trtllm_cutlass_heuristic.cpp  trtllm_fused_moe_dev_kernel.cu  trtllm_fused_moe_routing_deepseek.cu  trtllm_fused_moe_routing_llama4.cu  trtllm_fused_moe_routing_renormalize.cu  trtllm_fused_moe_runner.cu
src/metal-kernels/: Cargo.toml  build.rs
src/metal-kernels/src/: fused_rope.metal  gdn.metal  lib.rs  prefill_paged_attn.metal
