[package]
name = "attention-rs"
version = "0.4.3"
edition = "2021"
description = "High-performance LLM attention kernels and operations (PagedAttention, Flahinfer, Mamba, MoE, RoPE) for Candle, optimized for CUDA and Metal."
repository = "https://github.com/guoqingbao/attention.rs"
homepage = "https://github.com/guoqingbao/attention.rs"
documentation = "https://docs.rs/attention-rs"
readme = "ReadMe.md"
keywords = ["attention", "mamba", "moe", "flashinfer", "candle", "inference", "rust"]
categories = ["algorithms", "hardware-support", "science"]
license = "MIT"

[dependencies]
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "44077f4" }
candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "44077f4" }
#candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "5bed038", optional = true }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
tracing = "0.1.40"
parking_lot = "0.12.4"
rayon="1.10.0"
kernels = { path = "./src/kernels", version="0.4.2", optional = true}
metal = { version = "0.27.0", features = ["mps"], optional = true }
metal-kernels = { path = "./src/metal-kernels", version="0.1.9", optional = true}
flashattn-rs = { git = "https://github.com/guoqingbao/flashattn.rs.git", version="0.1.0", rev = "7c972a4", optional = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:kernels"]
graph = ["cuda", "candle-core/graph"]
flashattn = ["dep:flashattn-rs", "flashattn-rs/flash-context", "kernels/no-fp8-kvcache"]
flash-decoding = ["dep:flashattn-rs", "flashattn-rs/flash-decoding", "kernels/no-fp8-kvcache"]
no-marlin = ["dep:kernels", "kernels/no-marlin"]
no-fp8-kvcache = ["dep:kernels", "kernels/no-fp8-kvcache"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal-kernels", "dep:metal"]
cutlass = ["dep:kernels", "kernels/cutlass"]
flashinfer = ["cuda", "dep:kernels", "kernels/flashinfer"]
