[package]
name = "metal-kernels"
version = "0.1.9"
edition = "2021"
description = "Paged attention kernels for Metal device"
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
metal = { version = "0.27.0", features = ["mps"] }
thiserror = "1"
once_cell = "1.20.2"
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "1e9d1a9" }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
